--- a/recipes/roti.html
+++ b/recipes/roti.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/roti.html">Roti Recipe</a>
+    <h1>Roti Recipe</h1>
+   
 </body>
 </html>
