Adding the eggs recipe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/roti.html">Roti Recipe</a>
+    <ol><li><a href="recipes/roti.html">Roti Recipe</a></li>
+        <li><a href="recipes/eggs.html">Eggs Recipe</a></li>
+    
+    
+    </ol>
 </body>
 </html>
